--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+
+
+.site-layout-background {
+  background: #fff;
+}
+#components-layout-demo-top-side {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +49,4 @@
     transform: rotate(360deg);
   }
 }
+
